Copying of *.html resources to a build directory

--- a/pom.xml
+++ b/pom.xml
@@ -167,6 +167,7 @@
 					<include>**/*.codes</include>
 					<include>**/*.keywords</include>
 					<include>**/*.license</include>
+					<include>**/*.html</include>
 				</includes>
 			</resource>
 		</resources>
