--- a/src/org/executequery/eq.system.properties
+++ b/src/org/executequery/eq.system.properties
@@ -31,8 +31,8 @@ eq.minor.version=4.3.2
 eq.major.version=4.3
 eq.build=5448
 help.version=3.2.0
-check.version.url=http://executequery.org/downloads/version.txt
-check.version.notes.url=http://executequery.org/downloads/latest.txt
+check.version.url=https://api.github.com/repos/redsoftbiz/executequery/releases/latest
+check.version.notes.url=https://api.github.com/repos/redsoftbiz/executequery/releases/latest
 
 # about panel credits
 about.panel.credits=Takis Diakoumis|Original Developer,\
