Visual elements, that include 'Execute Query' string, replaced with 'Red Expert' string

--- a/src/org/executequery/eq.system.properties
+++ b/src/org/executequery/eq.system.properties
@@ -10,7 +10,7 @@
 
 # the user defined properties directory
 # within the user's home directory
-eq.user.home.dir=.executequery
+eq.user.home.dir=.redexpert
 
 # icons paths
 icons.path=/org/executequery/icons/
