User feedbacks are sent to rdb.support@red-soft.biz mail now

--- a/pom.xml
+++ b/pom.xml
@@ -151,6 +151,14 @@
 			<artifactId>jsch</artifactId>
 			<version>0.1.53</version>
 		</dependency>
+		
+		<dependency>
+			<groupId>javax.mail</groupId>
+			<artifactId>mail</artifactId>
+			<version>1.4</version>
+		</dependency>
+
+		
 	</dependencies>
 
 	<build>
