Basic package for running on linux and windows (no installers and exe runner)

--- a/executequery.desktop
+++ b/executequery.desktop
@@ -2,8 +2,8 @@
 Version=1.0
 Encoding=UTF-8
 Type=Application
-Exec=eq.sh
-Icon=eq.png
+Exec=red_expert.sh
+Icon=red_expert.png
 Terminal=false
 Name=Execute Query
 Categories=Application;Development;
