--- a/src/org/executequery/eq.system.properties
+++ b/src/org/executequery/eq.system.properties
@@ -33,6 +33,7 @@ eq.build=5460
 help.version=3.2.0
 check.version.url=https://api.github.com/repos/redsoftbiz/executequery/releases/latest
 check.version.notes.url=https://api.github.com/repos/redsoftbiz/executequery/releases/latest
+re.version=4.3.4
 
 # about panel credits
 about.panel.credits=Takis Diakoumis|Original Developer,\
