--- a/build.xml
+++ b/build.xml
@@ -8,6 +8,7 @@
 	<property name="lib.dir" value="${dist.outdir}/lib" />
 	<property name="docs.dir" value="${dist.outdir}/docs" />
 	<property name="main.class" value="org.executequery.ExecuteQuery" />
+	<property name="launch4j.dir" value="../launch4j" />
 
 	<path id="classpath">
 		<pathelement location="${lib.dir}" />
@@ -68,10 +69,20 @@
 
 	</target>
 
+	<target name="exe" depends="jar">
+		<taskdef name="launch4j" classname="net.sf.launch4j.ant.Launch4jTask" classpath="${launch4j.dir}/launch4j.jar
+		    :${launch4j.dir}/xstream.jar" />
+		<launch4j>
+			<config headerType="gui" jar="RedExpert.jar" outfile="RedExpert.exe" icon="red_expert.ico">
+				<jre minVersion="1.7.0" />
+			</config>
+		</launch4j>
+	</target>
+
     <target name="clean">
         <delete dir="${compile.outdir}" quiet="true"/>
     </target>
 
-	<target name="all" depends="compile,jar" />
+	<target name="all" depends="compile,jar,exe" />
 
 </project>
