Added framework of the jdbc logger
There is driver for logging jdbc sql queries. You must register jdbc logger driver library and add prefix to your JDBC URL with jdbcperflogger:, example: jdbcperflogger:jdbc:firebirdsql://[host]:[port]/[source]

--- a/pom.xml
+++ b/pom.xml
@@ -162,8 +162,13 @@
 			<version>1.4</version>
 		</dependency>
 
-		
-	</dependencies>
+		<dependency>
+			<groupId>com.fifesoft</groupId>
+			<artifactId>rsyntaxtextarea</artifactId>
+			<version>2.5.6</version>
+		</dependency>
+
+    </dependencies>
 
 	<build>
 		<sourceDirectory>src</sourceDirectory>
