--- a/src/org/executequery/eq.default.properties
+++ b/src/org/executequery/eq.default.properties
@@ -169,6 +169,7 @@ system.display.keywords=false
 system.display.drivers=true
 system.display.statusbar=true
 system.display.console=true
+system.display.jdbclogger=true
 system.display.navigator=true
 system.display.systemprops=true
 system.display.state-codes=false
