See #16113. Added property in system config to use connection pool

--- a/src/org/executequery/eq.default.properties
+++ b/src/org/executequery/eq.default.properties
@@ -200,6 +200,7 @@ browser.query.row.count=true
 # Connection Options
 # ------------------------------
 
+connection.usepool=0
 connection.initialcount=1
 connection.scheme=0
 
