--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,7 @@
 			<artifactId>jaybird</artifactId>
 			<version>3.0.0</version>
 			<scope>system</scope>
-			<systemPath>${pom.basedir}/lib/jaybird-full-3.0.0.jar</systemPath>
+			<systemPath>${pom.basedir}/lib/jaybird-full-3.0.0-SNAPSHOT.jar</systemPath>
 			<type>jar</type>
 		</dependency>
 
@@ -208,6 +208,8 @@
 	<build>
 		<sourceDirectory>src</sourceDirectory>
 
+		<finalName>${project.artifactId}</finalName>
+
 		<resources>
 			<resource>
 				<directory>src</directory>
@@ -240,7 +242,7 @@
 								<resource>
 									<directory>./lib</directory>
 									<includes>
-										<include>**/jaybird-full-3.0.0.jar</include>
+										<include>**/jaybird-full-3.0.0-SNAPSHOT.jar</include>
 										<include>**/jdbc-perf-logger-driver-0.8.1-SNAPSHOT.jar</include>
 									</includes>
 								</resource>
@@ -280,8 +282,8 @@
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>2.0.2</version>
 				<configuration>
-					<source>1.7</source>
-					<target>1.7</target>
+					<source>1.8</source>
+					<target>1.8</target>
 				</configuration>
 			</plugin>
 
@@ -321,16 +323,17 @@
 			    	<artifactId>maven-shade-plugin</artifactId>
 			    	<version>1.4</version>
 			    	<executions>
-					<execution>
-				    		<phase>package</phase>
-				    		<goals>
-							<goal>shade</goal>
-				    		</goals>
-					</execution>
+						<execution>
+								<phase>package</phase>
+								<goals>
+								<goal>shade</goal>
+								</goals>
+						</execution>
 			    	</executions>
 			    	<configuration>
-					<shadedArtifactAttached>true</shadedArtifactAttached> 
-					<shadedClassifierName>shaded</shadedClassifierName> 
+						<finalName>${project.artifactId}-shaded</finalName>
+						<shadedArtifactAttached>true</shadedArtifactAttached>
+						<shadedClassifierName>shaded</shadedClassifierName>
 			    	</configuration>
 			</plugin>
 
@@ -349,16 +352,16 @@
 					</goals>
 					<configuration>
 						<headerType>gui</headerType>
-						<outfile>${pom.basedir}/target/${project.artifactId}-${project.version}.exe</outfile>
-						<jar>${pom.basedir}/target/${project.artifactId}-${project.version}-shaded.jar</jar>
+						<outfile>${pom.basedir}/target/${project.artifactId}.exe</outfile>
+						<jar>${pom.basedir}/target/${project.artifactId}-shaded.jar</jar>
 						<errTitle>Red Expert Error</errTitle>
 						<classPath>
 								<mainClass>org.executequery.ExecuteQuery</mainClass>
 						</classPath>
 						<icon>${pom.basedir}/red_expert.ico</icon>
 						<jre>
-								<minVersion>1.7.0</minVersion>
-								<maxVersion>1.8.0</maxVersion>
+								<minVersion>1.8.0</minVersion>
+								<maxVersion>1.9.0</maxVersion>
 								<initialHeapSize>128</initialHeapSize>
 								<maxHeapSize>1024</maxHeapSize>
 						</jre>
