--- a/pom.xml
+++ b/pom.xml
@@ -334,6 +334,16 @@
 						<finalName>${project.artifactId}-shaded</finalName>
 						<shadedArtifactAttached>true</shadedArtifactAttached>
 						<shadedClassifierName>shaded</shadedClassifierName>
+						<filters>
+							<filter>
+								<artifact>*:*</artifact>
+								<excludes>
+									<exclude>META-INF/*.SF</exclude>
+									<exclude>META-INF/*.DSA</exclude>
+									<exclude>META-INF/*.RSA</exclude>
+								</excludes>
+							</filter>
+						</filters>
 			    	</configuration>
 			</plugin>
 
