[ui] The connection panel is expanded

--- a/src/org/executequery/eq.default.properties
+++ b/src/org/executequery/eq.default.properties
@@ -169,7 +169,7 @@ system.display.keywords=false
 system.display.drivers=true
 system.display.statusbar=true
 system.display.console=true
-system.display.jdbclogger=true
+system.display.jdbclogger=false
 system.display.navigator=true
 system.display.systemprops=true
 system.display.state-codes=false
@@ -182,7 +182,7 @@ system.display.state-codes=false
 divider.location.left=260
 divider.location.right=-1
 divider.location.west=-1
-divider.location.center=560
+divider.location.center=680
 divider.location.east=-1
 
 
