--- a/pom.xml
+++ b/pom.xml
@@ -1,455 +1,16 @@
-<project>
-	<modelVersion>4.0.0</modelVersion>
+<?xml version="1.0" encoding="UTF-8"?>
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
 
-	<groupId>org.executequery</groupId>
-	<artifactId>RedExpert</artifactId>
-	<version>4.3</version>
-	<packaging>jar</packaging>
-
-	<properties>                             
-		<exe.version>4.3.4.8</exe.version>
-		<basedir>${pom.basedir}</basedir>
-	</properties>
-
-	<repositories>
-		<repository>
-			<id>nexus-releases</id>
-			<url>http://nexus.red-soft.biz/nexus/content/repositories/releases</url>
-		</repository>
-	</repositories>
-
-	<dependencies>
-
-		<dependency>
-			<groupId>biz.redsoft.customlib</groupId>
-			<artifactId>fbplugin</artifactId>
-			<version>1.0.0</version>
-			<scope>system</scope>
-			<systemPath>${pom.basedir}/lib/fbplugin.jar</systemPath>
-			<type>jar</type>
-		</dependency>
-
-		<dependency>
-			<groupId>xerces</groupId>
-			<artifactId>xercesImpl</artifactId>
-			<version>2.11.0</version>
-		</dependency>
-
-		<dependency>
-			<groupId>org.antlr</groupId>
-			<artifactId>antlr4-runtime</artifactId>
-			<version>4.6</version>
-		</dependency>
-
-		<dependency>
-			<groupId>batik</groupId>
-			<artifactId>batik</artifactId>
-			<version>1.5</version>
-		</dependency>
-
-		<dependency>
-			<groupId>batik</groupId>
-			<artifactId>batik-awt-util</artifactId>
-			<version>1.6-1</version>
-		</dependency>
-
-		<dependency>
-			<groupId>org.apache.xmlgraphics</groupId>
-			<artifactId>batik-codec</artifactId>
-			<version>1.8</version>
-		</dependency>
-
-		<dependency>
-			<groupId>batik</groupId>
-			<artifactId>batik-dom</artifactId>
-			<version>1.6-1</version>
-		</dependency>
-
-		<dependency>
-			<groupId>batik</groupId>
-			<artifactId>batik-ext</artifactId>
-			<version>1.6-1</version>
-		</dependency>
-
-		<dependency>
-			<groupId>batik</groupId>
-			<artifactId>batik-rasterizer-ext</artifactId>
-			<version>1.6-1</version>
-		</dependency>
-
-		<dependency>
-			<groupId>batik</groupId>
-			<artifactId>batik-svggen</artifactId>
-			<version>1.6-1</version>
-		</dependency>
-
-		<dependency>
-			<groupId>batik</groupId>
-			<artifactId>batik-util</artifactId>
-			<version>1.6-1</version>
-		</dependency>
-
-		<dependency>
-			<groupId>batik</groupId>
-			<artifactId>batik-xml</artifactId>
-			<version>1.6-1</version>
-		</dependency>
-
-		<dependency>
-			<groupId>edu.stanford.ejalbert</groupId>
-			<artifactId>BrowserLauncher2</artifactId>
-			<version>1.3</version>
-		</dependency>
-
-		<dependency>
-			<groupId>c3p0</groupId>
-			<artifactId>c3p0</artifactId>
-			<version>0.9.1.2</version>
-		</dependency>
-
-		<dependency>
-			<groupId>commons-codec</groupId>
-			<artifactId>commons-codec</artifactId>
-			<version>1.10</version>
-		</dependency>
-
-		<dependency>
-			<groupId>commons-httpclient</groupId>
-			<artifactId>commons-httpclient</artifactId>
-			<version>3.1</version>
-		</dependency>
-
-		<dependency>
-			<groupId>commons-lang</groupId>
-			<artifactId>commons-lang</artifactId>
-			<version>2.6</version>
-		</dependency>
-
-		<dependency>
-			<groupId>commons-logging</groupId>
-			<artifactId>commons-logging</artifactId>
-			<version>1.2</version>
-		</dependency>
-
-		<dependency>
-			<groupId>com.sun.woodstock.dependlibs</groupId>
-			<artifactId>jh</artifactId>
-			<version>2.0</version>
-		</dependency>
-
-		<dependency>
-			<groupId>com.googlecode.juniversalchardet</groupId>
-			<artifactId>juniversalchardet</artifactId>
-			<version>1.0.3</version>
-		</dependency>
-
-		<dependency>
-			<groupId>org.liquibase</groupId>
-			<artifactId>liquibase-core</artifactId>
-			<version>3.5.3</version>
-		</dependency>
-
-		<dependency>
-			<groupId>log4j</groupId>
-			<artifactId>log4j</artifactId>
-			<version>1.2.17</version>
-		</dependency>
-
-		<dependency>
-			<groupId>org.apache.poi</groupId>
-			<artifactId>poi</artifactId>
-			<version>3.12</version>
-		</dependency>
-
-		<dependency>
-			<groupId>xml-apis</groupId>
-			<artifactId>xml-apis</artifactId>
-			<version>2.0.2</version>
-		</dependency>
-
-		<dependency>
-			<groupId>com.jcraft</groupId>
-			<artifactId>jsch</artifactId>
-			<version>0.1.53</version>
-		</dependency>
-		
-		<dependency>
-			<groupId>javax.mail</groupId>
-			<artifactId>mail</artifactId>
-			<version>1.4</version>
-		</dependency>
-
-		<dependency>
-			<groupId>com.fifesoft</groupId>
-			<artifactId>rsyntaxtextarea</artifactId>
-			<version>2.5.6</version>
-		</dependency>
-
-		<dependency>
-			<groupId>com.github.sylvainlaurent.jdbcperflogger</groupId>
-			<artifactId>jdbc-perf-logger-agent</artifactId>
-			<version>0.8.1</version>
-			<scope>system</scope>
-			<systemPath>${pom.basedir}/lib/jdbc-perf-logger-driver-0.8.1-SNAPSHOT.jar</systemPath>
-		</dependency>
-
-		<dependency>
-			<groupId>net.java.dev.jna</groupId>
-			<artifactId>jna</artifactId>
-			<version>4.2.2</version>
-		</dependency>
-
-		<dependency>
-			<groupId>javax.resource</groupId>
-			<artifactId>connector-api</artifactId>
-			<version>1.5</version>
-		</dependency>
-
-    </dependencies>
-
-	<build>
-		<sourceDirectory>src</sourceDirectory>
-		
-		<finalName>${project.artifactId}</finalName>
-			
-		<resources>
-			<resource>
-				<directory>src</directory>
-				<includes>
-					<include>**/*.properties</include>
-					<include>**/*.png</include>
-					<include>**/*.gif</include>
-					<include>**/*.xml</include>
-					<include>**/*.codes</include>
-					<include>**/*.keywords</include>
-					<include>**/*.license</include>
-					<include>**/*.html</include>
-				</includes>
-			</resource>
-		</resources>
-
-		<plugins>
-
-			<plugin>
-				<groupId>com.googlecode.addjars-maven-plugin</groupId>
-				<artifactId>addjars-maven-plugin</artifactId>
-				<version>1.0.5</version>
-				<executions>
-					<execution>
-						<goals>
-							<goal>add-jars</goal>
-						</goals>
-						<configuration>
-							<resources>
-								<resource>
-									<directory>./lib</directory>
-									<includes>
-										<!--include>**/jaybird-full-3.0.0-SNAPSHOT.jar</include-->
-										<include>**/jdbc-perf-logger-driver-0.8.1-SNAPSHOT.jar</include>
-										<include>**/fbplugin.jar</include>
-									</includes>
-								</resource>
-							</resources>
-						</configuration>
-					</execution>
-				</executions>
-			</plugin>
-
-			<plugin>
-				<artifactId>maven-resources-plugin</artifactId>
-				<version>3.0.2</version>
-				<executions>
-					<execution>
-						<id>copy-resources</id>
-						<phase>validate</phase>
-						<goals>
-							<goal>copy-resources</goal>
-						</goals>
-						<configuration>
-							<outputDirectory>${pom.basedir}/target</outputDirectory>
-							<resources>
-								<resource>
-									<directory>${pom.basedir}</directory>
-									<filtering>true</filtering>
-									<includes>
-										<include>**/fbtrace.conf</include>
-										<include>**/gss.login.conf</include>
-									</includes>
-								</resource>
-							</resources>
-						</configuration>
-					</execution>
-					<execution>
-						<id>copy-resources-2</id>
-						<phase>validate</phase>
-						<goals>
-							<goal>copy-resources</goal>
-						</goals>
-						<configuration>
-							<outputDirectory>${pom.basedir}/target/lib</outputDirectory>
-							<resources>
-								<resource>
-									<directory>${project.basedir}/lib</directory>
-									<includes>
-										<include>fbplugin-impl.jar</include>
-										<include>jaybird-full-3.1.0-SNAPSHOT.jar</include>
-									</includes>
-								</resource>
-							</resources>
-						</configuration>
-					</execution>
-				</executions>
-			</plugin>
-			<plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-antrun-plugin</artifactId>
-                <version>1.7</version>
-                <executions>
-                    <execution>
-                        <id>copy</id>
-                        <phase>validate</phase>
-                        <configuration>
-                            <target name="copy and rename file">
-                                <copy file="${basedir}/eq.sh" tofile="${basedir}/target/RedExpert.sh" />
-								<chmod file="${basedir}/target/RedExpert.sh" perm="755"/>
-                            </target>
-                        </configuration>
-                        <goals>
-                            <goal>run</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
-			<plugin>
-				<artifactId>maven-compiler-plugin</artifactId>
-				<version>2.0.2</version>
-				<configuration>
-					<source>1.8</source>
-					<target>1.8</target>
-				</configuration>
-			</plugin>
-
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-jar-plugin</artifactId>
-				<version>2.3.2</version>
-				<configuration>
-					<archive>
-						<manifest>
-							<addClasspath>true</addClasspath>
-							<classpathPrefix>lib/</classpathPrefix>
-							<!-- Jar file entry point -->
-							<mainClass>org.executequery.ExecuteQuery</mainClass>
-						</manifest>
-					</archive>
-				</configuration>
-			</plugin>
-
-			<plugin>
-				<artifactId>maven-dependency-plugin</artifactId>
-				<executions>
-					<execution>
-						<phase>process-sources</phase>
-						<goals>
-							<goal>copy-dependencies</goal>
-						</goals>
-						<configuration>
-							<outputDirectory>${project.build.directory}/lib</outputDirectory>
-						</configuration>
-					</execution>
-				</executions>
-			</plugin>
-
-			<plugin>
-			    	<groupId>org.apache.maven.plugins</groupId>
-			    	<artifactId>maven-shade-plugin</artifactId>
-			    	<version>1.4</version>
-			    	<executions>
-						<execution>
-								<phase>package</phase>
-								<goals>
-								<goal>shade</goal>
-								</goals>
-						</execution>
-			    	</executions>
-			    	<configuration>
-						<finalName>${project.artifactId}-shaded</finalName>
-						<shadedArtifactAttached>true</shadedArtifactAttached>
-						<shadedClassifierName>shaded</shadedClassifierName>
-						<filters>
-							<filter>
-								<artifact>*:*</artifact>
-								<excludes>
-									<exclude>META-INF/*.SF</exclude>
-									<exclude>META-INF/*.DSA</exclude>
-									<exclude>META-INF/*.RSA</exclude>
-								</excludes>
-							</filter>
-						</filters>
-			    	</configuration>
-			</plugin>
-
-			<plugin>
-				<groupId>org.bluestemsoftware.open.maven.plugin</groupId>
-				<artifactId>launch4j-plugin</artifactId>
-				<version>1.5.0.0</version>
-				<executions>
-
-				<!-- GUI exe -->
-				<execution>
-					<id>l4j-gui</id>
-					<phase>package</phase>
-				    	<goals>
-						<goal>launch4j</goal>
-					</goals>
-					<configuration>
-						<headerType>gui</headerType>
-						<outfile>${pom.basedir}/target/${project.artifactId}.exe</outfile>
-						<jar>${pom.basedir}/target/${project.artifactId}.jar</jar>
-						<errTitle>Red Expert Error</errTitle>
-						<classPath>
-								<mainClass>org.executequery.ExecuteQuery</mainClass>
-						</classPath>
-						<icon>${pom.basedir}/red_expert.ico</icon>
-						<jre>
-								<minVersion>1.8.0</minVersion>
-								<maxVersion>1.9.0</maxVersion>
-								<initialHeapSize>128</initialHeapSize>
-								<maxHeapSize>1024</maxHeapSize>
-						</jre>
-						<versionInfo>
-							<fileVersion>${exe.version}</fileVersion>
-							<txtFileVersion>${project.version}</txtFileVersion>
-							<fileDescription>${project.artifactId}-${project.version}</fileDescription>
-							<copyright>Red Soft</copyright>
-							<productVersion>${exe.version}</productVersion>
-							<txtProductVersion>${exe.version}</txtProductVersion>
-							<productName>${project.artifactId}</productName>
-							<internalName>${project.artifactId}</internalName>
-							<originalFilename>${project.artifactId}-${project.version}.exe</originalFilename>
-						</versionInfo>
-					</configuration>
-				</execution>
-			    </executions>
-			</plugin>
-			<plugin>
-        <artifactId>maven-assembly-plugin</artifactId>
-        <version>2.5.3</version>
-        <configuration>
-			<descriptors>
-				<descriptor>dep.xml</descriptor>
-			</descriptors>
-        </configuration>
-        <executions>
-          <execution>
-            <id>create-archive</id>
-            <phase>package</phase>
-            <goals>
-              <goal>attached</goal>
-            </goals>
-          </execution>
-        </executions>
-      </plugin>
-		</plugins>
-	</build>
+    <groupId>org.executequery</groupId>
+    <artifactId>RedExpert-parent</artifactId>
+    <packaging>pom</packaging>
+    <version>4.3</version>
+    <modules>
+		<module>modules/plugins/fbplugin</module>
+        <module>modules/plugins/fbplugin-impl</module>
+        <module>modules/redexpert</module>
+    </modules>
 </project>
