Fixed #20135 fixed updating

--- a/modules/redexpert/pom.xml
+++ b/modules/redexpert/pom.xml
@@ -209,6 +209,12 @@
       <version>1.5</version>
     </dependency>
 
+    <dependency>
+      <groupId>org.json</groupId>
+      <artifactId>json</artifactId>
+      <version>20170516</version>
+    </dependency>
+
   </dependencies>
 
   <build>
