--- a/src/org/executequery/eq.default.properties
+++ b/src/org/executequery/eq.default.properties
@@ -18,6 +18,7 @@ startup.display.openwindow=1
 startup.display.lookandfeel=NATIVE
 startup.connection.name=noconn
 startup.version.check=true
+startup.unstableversions.load=false
 
 # ---------------------------
 # Appearance settings
