--- a/src/org/executequery/eq.default.properties
+++ b/src/org/executequery/eq.default.properties
@@ -209,6 +209,7 @@ connection.reuse.count=20
 connection.reuse=true
 startup.connection.connect=false
 connection.login.timeout=15
+connection.logging=true
 
 
 # --------------------
