--- a/modules/redexpert/pom.xml
+++ b/modules/redexpert/pom.xml
@@ -184,20 +184,6 @@
     </dependency>
 
     <dependency>
-      <groupId>com.fifesoft</groupId>
-      <artifactId>rsyntaxtextarea</artifactId>
-      <version>2.5.6</version>
-    </dependency>
-
-    <dependency>
-      <groupId>com.github.sylvainlaurent.jdbcperflogger</groupId>
-      <artifactId>jdbc-perf-logger-agent</artifactId>
-      <version>0.8.1</version>
-      <scope>system</scope>
-      <systemPath>${pom.basedir}/../../lib/jdbc-perf-logger-driver-0.8.1-SNAPSHOT.jar</systemPath>
-    </dependency>
-
-    <dependency>
       <groupId>net.java.dev.jna</groupId>
       <artifactId>jna</artifactId>
       <version>4.2.2</version>
@@ -221,6 +207,11 @@
       <version>10.3.1</version>
     </dependency>
 
+    <dependency>
+      <groupId>com.fifesoft</groupId>
+      <artifactId>rsyntaxtextarea</artifactId>
+      <version>2.5.6</version>
+    </dependency>
   </dependencies>
 
   <build>
@@ -258,7 +249,7 @@
                   <directory>${pom.basedir}/../../lib</directory>
                   <includes>
                     <!--include>**/jaybird-full-3.0.0-SNAPSHOT.jar</include-->
-                    <include>**/jdbc-perf-logger-driver-0.8.1-SNAPSHOT.jar</include>
+                    <!--include>**/jdbc-perf-logger-driver-0.8.1-SNAPSHOT.jar</include-->
                     <include>**/fbplugin.jar</include>
                   </includes>
                 </resource>
@@ -309,6 +300,7 @@
                   <includes>
                     <include>fbplugin-impl.jar</include>
                     <include>jaybird-full-3.1.0-SNAPSHOT.jar</include>
+                    <include>jdbc-perf-logger-driver-0.8.1-SNAPSHOT.jar</include>
                   </includes>
                 </resource>
               </resources>
