Corrected the display of records
1. The changed values are displayed
2. Added the ability to highlight color changes values
3.In the RecordDataItem, the isGenerated method was added to exclude editing from the request

--- a/src/org/executequery/eq.default.properties
+++ b/src/org/executequery/eq.default.properties
@@ -145,6 +145,7 @@ results.table.cell.date.background.colour=-1
 results.table.cell.blob.background.colour=-1
 results.table.cell.boolean.background.colour=-1
 results.table.cell.other.background.colour=-1
+results.table.cell.changed.background.colour=-1
 
 resuts.date.pattern=
 results.table.cell.null.text=<NULL>
