Added the possibility of adding and removing rows directly in the table

--- a/src/org/executequery/eq.default.properties
+++ b/src/org/executequery/eq.default.properties
@@ -146,6 +146,7 @@ results.table.cell.blob.background.colour=-1
 results.table.cell.boolean.background.colour=-1
 results.table.cell.other.background.colour=-1
 results.table.cell.changed.background.colour=-1
+results.table.cell.deleted.background.colour=-1498604
 
 resuts.date.pattern=
 results.table.cell.null.text=<NULL>
@@ -155,6 +156,7 @@ results.alternating.row.background=-1314561
 
 results.table.clob.length=100
 results.table.double-click.record.dialog=true
+results.table.use.form.adding.deleting=false
 
 results.table.row.select=true
 results.table.row.numbers=false
