Added buttons commit/rollback on dataTab
yet added possibility select Color for new records

--- a/src/org/executequery/eq.default.properties
+++ b/src/org/executequery/eq.default.properties
@@ -147,6 +147,7 @@ results.table.cell.boolean.background.colour=-1
 results.table.cell.other.background.colour=-1
 results.table.cell.changed.background.colour=-1
 results.table.cell.deleted.background.colour=-1498604
+results.table.cell.new.background.colour=-1
 
 resuts.date.pattern=
 results.table.cell.null.text=<NULL>
