--- a/src/org/executequery/eq.default.properties
+++ b/src/org/executequery/eq.default.properties
@@ -152,12 +152,15 @@ results.table.cell.new.background.colour=-1
 resuts.date.pattern=
 results.table.cell.null.text=<NULL>
 results.table.cell.null.background.colour=-5390348
+results.table.cell.null.adding.background.colour=-5390348
+results.table.cell.null.deleting.background.colour=-5390348
 
 results.alternating.row.background=-1314561
 
 results.table.clob.length=100
 results.table.double-click.record.dialog=true
 results.table.use.form.adding.deleting=false
+results.table.use.other.color.null=false
 
 results.table.row.select=true
 results.table.row.numbers=false
