Corrected Fonts and Colors for HexEditor

--- a/src/org/executequery/eq.default.properties
+++ b/src/org/executequery/eq.default.properties
@@ -111,8 +111,11 @@ editor.linenumber.foreground=-8882056
 
 editor.text.selection.foreground=-1
 editor.text.selection.background=-13408615
+editor.text.selection.background.alternative=-13408615
 
 editor.text.background.colour=-1
+editor.text.background.alternate.color=-1314561
+editor.text.foreground.colour=-16777216
 
 editor.results.tabs.single=false
 editor.results.background.colour=-3355444
