--- a/modules/redexpert/pom.xml
+++ b/modules/redexpert/pom.xml
@@ -18,13 +18,6 @@
     <relativePath>../../pom.xml</relativePath>
   </parent>
 
-  <repositories>
-    <repository>
-      <id>nexus-releases</id>
-      <url>http://nexus.red-soft.biz/nexus/content/repositories/releases</url>
-    </repository>
-  </repositories>
-
   <dependencies>
 
     <dependency>
@@ -249,7 +242,6 @@
                 <resource>
                   <directory>${pom.basedir}/../../lib</directory>
                   <includes>
-                    <!--include>**/jaybird-full-3.0.0-SNAPSHOT.jar</include-->
                     <!--include>**/jdbc-perf-logger-driver-0.8.1-SNAPSHOT.jar</include-->
                     <include>**/fbplugin.jar</include>
                   </includes>
@@ -300,9 +292,14 @@
                   <directory>${pom.basedir}/../../lib</directory>
                   <includes>
                     <include>fbplugin-impl.jar</include>
-                    <include>jaybird-full-3.1.0-SNAPSHOT.jar</include>
                     <include>jdbc-perf-logger-driver-0.8.1-SNAPSHOT.jar</include>
                     <include>jdbc-logger.jar</include>
+                  </includes>
+                </resource>
+                <resource>
+                  <directory>${pom.basedir}/../plugins/fbplugin-impl/target</directory>
+                  <includes>
+                    <include>jaybird-full-jdk18-3.0.4.7.jar</include>
                   </includes>
                 </resource>
               </resources>
