--- a/modules/plugins/fbplugin-impl/pom.xml
+++ b/modules/plugins/fbplugin-impl/pom.xml
@@ -70,6 +70,8 @@
             </goals>
             <configuration>
               <outputDirectory>${project.build.directory}</outputDirectory>
+              <outputDirectory>../../../lib</outputDirectory>
+              <excludeArtifactIds>fbplugin</excludeArtifactIds>
             </configuration>
           </execution>
         </executions>
