--- a/modules/plugins/fbplugin-impl/pom.xml
+++ b/modules/plugins/fbplugin-impl/pom.xml
@@ -61,29 +61,41 @@
         </configuration>
       </plugin>
       <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-dependency-plugin</artifactId>
         <executions>
           <execution>
             <id>copy-dep-1</id>
-            <phase>package</phase>
             <goals>
-              <goal>copy-dependencies</goal>
+              <goal>copy</goal>
             </goals>
             <configuration>
-              <outputDirectory>${project.build.directory}</outputDirectory>
-              <outputDirectory>../../redexpert/target/lib</outputDirectory>
-              <excludeArtifactIds>fbplugin</excludeArtifactIds>
+              <artifactItems>
+                <artifactItem>
+                  <groupId>ru.red-soft.jdbc</groupId>
+                  <artifactId>jaybird-full-jdk18</artifactId>
+                  <type>jar</type>
+                  <outputDirectory>../../../lib</outputDirectory>
+                  <destFileName>jaybird-full.jar</destFileName>
+                </artifactItem>
+              </artifactItems>
             </configuration>
           </execution>
           <execution>
             <id>copy-dep-2</id>
-            <phase>package</phase>
             <goals>
-              <goal>copy-dependencies</goal>
+              <goal>copy</goal>
             </goals>
             <configuration>
-              <outputDirectory>../../../lib</outputDirectory>
-              <excludeArtifactIds>fbplugin</excludeArtifactIds>
+              <artifactItems>
+                <artifactItem>
+                  <groupId>ru.red-soft.jdbc</groupId>
+                  <artifactId>jaybird-full-jdk18</artifactId>
+                  <type>jar</type>
+                  <outputDirectory>../../redexpert/target/lib</outputDirectory>
+                  <destFileName>jaybird-full.jar</destFileName>
+                </artifactItem>
+              </artifactItems>
             </configuration>
           </execution>
         </executions>
