--- a/src/org/executequery/eq.default.properties
+++ b/src/org/executequery/eq.default.properties
@@ -192,3 +192,9 @@ recent.files.count=4
 general.save.prompt=false
 general.line.separator=0
 
+reddatabase.token=
+reddatabase.check.url=http://reddatabase.ru/api/website/updates/?project=redexpert&showrc=True
+reddatabase.get-token.url=http://reddatabase.ru/api-token-auth/
+#Необходимо заполнить эти данные прежде чем выкладывать на сайт.
+reddatabase.filename=
+reddatabase.get-files.url=
