--- a/modules/redexpert/pom.xml
+++ b/modules/redexpert/pom.xml
@@ -179,8 +179,15 @@
     <dependency>
       <groupId>net.java.dev.jna</groupId>
       <artifactId>jna</artifactId>
-      <version>4.2.2</version>
+      <version>4.5.0</version>
     </dependency>
+
+    <dependency>
+      <groupId>net.java.dev.jna</groupId>
+      <artifactId>jna-platform</artifactId>
+      <version>4.5.0</version>
+    </dependency>
+
 
     <dependency>
       <groupId>javax.resource</groupId>
