--- a/src/org/executequery/eq.default.properties
+++ b/src/org/executequery/eq.default.properties
@@ -197,5 +197,5 @@ reddatabase.check.url=http://reddatabase.ru/api/website/updates/?project=redexpe
 reddatabase.check.rc.url=http://reddatabase.ru/api/website/updates/?project=redexpert&showrc=True
 reddatabase.get-token.url=http://reddatabase.ru/api-token-auth/
 #Необходимо заполнить эти данные прежде чем выкладывать на сайт.
-reddatabase.filename=
-reddatabase.get-files.url=
+reddatabase.filename=bin/RedExpert-
+reddatabase.get-files.url=http://www.reddatabase.ru/api/website/files/?project=redexpert&version=
