--- a/src/org/executequery/eq.default.properties
+++ b/src/org/executequery/eq.default.properties
@@ -155,7 +155,7 @@ browser.max.records=10000
 browser.catalog.schema.defaults.only=false
 browser.double-click.to.connect=false
 browser.always.show.table.editable.label=true
-browser.query.row.count=true
+browser.query.row.count=false
 # ------------------------------
 # Connection Options
 # ------------------------------
