--- a/src/org/executequery/eq.system.properties
+++ b/src/org/executequery/eq.system.properties
@@ -19,11 +19,12 @@ eq.import.log=import.log
 # version info
 eq.minor.version=4.4.2
 eq.major.version=4.4
-eq.build=5487
+eq.build=1000
 help.version=3.2.0
 check.version.url=https://api.github.com/repos/redsoftbiz/executequery/releases/latest
 check.version.notes.url=https://api.github.com/repos/redsoftbiz/executequery/releases/latest
-re.version=4.3.4
+re.version=2.0.0
+branch=master
 # about panel credits
 about.panel.credits=Takis Diakoumis|Original Developer,\
 Red Soft|Contributor,\
