--- a/src/org/executequery/eq.system.properties
+++ b/src/org/executequery/eq.system.properties
@@ -23,8 +23,8 @@ eq.build=1000
 help.version=3.2.0
 check.version.url=https://api.github.com/repos/redsoftbiz/executequery/releases/latest
 check.version.notes.url=https://api.github.com/repos/redsoftbiz/executequery/releases/latest
-re.version=2.0.0
-branch=master
+re.version=1.0.0
+branch=RedExpert_1.0
 # about panel credits
 about.panel.credits=Takis Diakoumis|Original Developer,\
 Red Soft|Contributor,\
