changed updated mechanism

--- a/src/org/executequery/eq.default.properties
+++ b/src/org/executequery/eq.default.properties
@@ -191,6 +191,7 @@ system.log.out=false
 recent.files.count=4
 general.save.prompt=false
 general.line.separator=0
+releasehub=false
 reddatabase.token=
 reddatabase.check.url=http://reddatabase.ru/api/website/updates/?project=redexpert
 reddatabase.check.rc.url=http://reddatabase.ru/api/website/updates/?project=redexpert&showrc=True
