check major versions

--- a/src/org/executequery/eq.default.properties
+++ b/src/org/executequery/eq.default.properties
@@ -15,6 +15,7 @@ startup.display.lookandfeel=NATIVE
 startup.connection.name=noconn
 startup.version.check=true
 startup.unstableversions.load=false
+startup.majorversions.load=true
 # ---------------------------
 # Appearance settings
 # ---------------------------
