--- a/src/org/executequery/eq.system.properties
+++ b/src/org/executequery/eq.system.properties
@@ -25,6 +25,7 @@ check.version.url=https://api.github.com/repos/redsoftbiz/executequery/releases/
 check.version.notes.url=https://api.github.com/repos/redsoftbiz/executequery/releases/latest
 re.version=2.0.0
 branch=master
+branch.next.major.version=
 # about panel credits
 about.panel.credits=Takis Diakoumis|Original Developer,\
 Red Soft|Contributor,\
