create desktop entry for linux

--- a/modules/redexpert/pom.xml
+++ b/modules/redexpert/pom.xml
@@ -279,7 +279,9 @@
                     <include>**/gss.login.conf</include>
                     <include>red_expert.png</include>
                     <include>red_expert.ico</include>
+                    <include>redexpert.desktop</include>
                     <include>RedExpert.bat</include>
+                    <include>createDesktopEntry.sh</include>
                     <include>LICENSE.txt</include>
                   </includes>
                 </resource>
