--- a/src/org/executequery/eq.default.properties
+++ b/src/org/executequery/eq.default.properties
@@ -16,6 +16,7 @@ startup.connection.name=noconn
 startup.version.check=true
 startup.unstableversions.load=false
 startup.majorversions.load=true
+startup.create.desktop.entry=true
 # ---------------------------
 # Appearance settings
 # ---------------------------
