Make exe that runs JVM with UTF-8 encoding parameter

--- a/modules/redexpert/pom.xml
+++ b/modules/redexpert/pom.xml
@@ -422,6 +422,9 @@
                 <maxVersion>1.9.0</maxVersion>
                 <initialHeapSize>128</initialHeapSize>
                 <maxHeapSize>1024</maxHeapSize>
+                <opts>
+                  <opt>-Dfile.encoding=UTF-8</opt>
+                </opts>
               </jre>
               <versionInfo>
                 <fileVersion>${exe.version}</fileVersion>
