fixed default encoding

--- a/src/org/executequery/eq.default.properties
+++ b/src/org/executequery/eq.default.properties
@@ -186,7 +186,7 @@ internet.proxy.password=
 # --------------------
 # Other Options
 # --------------------
-system.file.encoding=
+system.file.encoding=UTF-8
 system.log.level=INFO
 system.log.err=false
 system.log.out=false
