--- a/src/org/executequery/eq.default.properties
+++ b/src/org/executequery/eq.default.properties
@@ -53,6 +53,11 @@ sqlsyntax.style.braces.match1=0
 sqlsyntax.style.braces.match2=0
 sqlsyntax.style.braces.error=0
 # ----------------------------
+# tree connections fonts
+# ----------------------------
+treeconnection.font.name=Monospaced
+treeconnection.font.size=12
+# ----------------------------
 # Desktop Settings
 # ----------------------------
 desktop.frame.icon=1
