added the ability to change height node and font default is system Font (in the connection tree)

--- a/src/org/executequery/eq.default.properties
+++ b/src/org/executequery/eq.default.properties
@@ -55,8 +55,9 @@ sqlsyntax.style.braces.error=0
 # ----------------------------
 # tree connections fonts
 # ----------------------------
-treeconnection.font.name=Monospaced
+treeconnection.font.name=
 treeconnection.font.size=12
+treeconnection.row.height=20
 # ----------------------------
 # Desktop Settings
 # ----------------------------
